--- a/동적크롤링.ipynb
+++ b/동적크롤링.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "07a1841f-a974-4555-b1fb-72c05ccbce85",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -355,11 +350,413 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "18c9bd5a-6400-4660-947c-f99698e211a5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'영업시간': '월-금 07:00~22:00 | 토 08:00~22:00 | 일/공휴일 08:00~21:00 |', '주차': '', '주소': '서울특별시 종로구 자하문로 10  ', '전화번호': '02-557-0510', '기타': '홀케익 당일 수령가능'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "\n",
+    "url = 'https://www.coffeebeankorea.com/store/store.asp'\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get(url)\n",
+    "time.sleep(1)\n",
+    "\n",
+    "driver.execute_script(\"storePop2('400')\") #함수호출\n",
+    "time.sleep(1)\n",
+    "html = driver.page_source\n",
+    "soup = BeautifulSoup(html, 'html.parser') \n",
+    "#팝업같은경우는 100프로 수집 못함\n",
+    "tr_lists = soup.select('#matizCoverLayer0Content > div > div > div.store_txt > table > tbody:nth-child(1) > tr')\n",
+    "\n",
+    "names = ['영업시간', '주차', '주소', '전화번호', '기타']\n",
+    "saved_dict = {}\n",
+    "for idx,tr in enumerate(tr_lists):\n",
+    "    saved_dict[names[idx]] = tr.find('td').text\n",
+    "print(saved_dict)\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d05293d7-5920-4b8f-8efa-09dd2d899465",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.select import Select\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "\n",
+    "url = 'https://auto.danawa.com/auto/?Work=record'\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get(url)\n",
+    "time.sleep(1)\n",
+    "\n",
+    "year_select = Select(driver.find_element(By.XPATH, '//*[@id=\"selMonth\"]') )\n",
+    "year_select.select_by_value(\"2024\")\n",
+    "month_select = Select(driver.find_element(By.XPATH, '//*[@id=\"selDay\"]') )\n",
+    "month_select.select_by_value(\"01\")\n",
+    "time.sleep(3)\n",
+    "\n",
+    "month_select = Select(driver.find_element(By.XPATH, '//*[@id=\"selDay\"]') )\n",
+    "month_select.select_by_value(\"02\")\n",
+    "time.sleep(3)\n",
+    "\n",
+    "month_select = Select(driver.find_element(By.XPATH, '//*[@id=\"selDay\"]') )\n",
+    "month_select.select_by_value(\"03\")\n",
+    "\n",
+    "\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ea4eeccf-73f5-48a0-a58e-4fd72e9e00c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'drive' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 24\u001b[0m\n\u001b[0;32m     21\u001b[0m from_month \u001b[38;5;241m=\u001b[39m Select(driver\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mXPATH, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m//*[@id=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mselDayTo\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m) )\n\u001b[0;32m     22\u001b[0m from_month\u001b[38;5;241m.\u001b[39mselect_by_value(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m12\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 24\u001b[0m button \u001b[38;5;241m=\u001b[39m drive\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mXPATH, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m//*[@id=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmonthPeriodDiv\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]/span[2]/input\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     25\u001b[0m button\u001b[38;5;241m.\u001b[39mclick()\n\u001b[0;32m     26\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'drive' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.select import Select\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "\n",
+    "url = 'https://auto.danawa.com/auto/?Work=record'\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get(url)\n",
+    "time.sleep(1)\n",
+    "\n",
+    "radio_button = driver.find_element(By.XPATH,'//*[@id=\"monthPeriodDiv\"]/span[2]/label/input')\n",
+    "radio_button.click()\n",
+    "from_year = Select(driver.find_element(By.XPATH, '//*[@id=\"selMonthFrom\"]') )\n",
+    "from_year.select_by_value(\"2024\")\n",
+    "from_month = Select(driver.find_element(By.XPATH, '//*[@id=\"selDayFrom\"]') )\n",
+    "from_month.select_by_value(\"01\")\n",
+    "\n",
+    "from_year = Select(driver.find_element(By.XPATH, '//*[@id=\"selMonthTo\"]') )\n",
+    "from_year.select_by_value(\"2024\")\n",
+    "from_month = Select(driver.find_element(By.XPATH, '//*[@id=\"selDayTo\"]') )\n",
+    "from_month.select_by_value(\"12\")\n",
+    "\n",
+    "button = drive.find_element(By.XPATH, '//*[@id=\"monthPeriodDiv\"]/span[2]/input')\n",
+    "button.click()\n",
+    "time.sleep(1)\n",
+    "\n",
+    "more_search = driver.find_element(By.XPATH, '//*[@id=\"autodanawa_gridC\"]/div[3]/article/main/div[2]/div[1]/a')\n",
+    "more_search.click()\n",
+    "time.sleep(1)\n",
+    "\n",
+    "html = driver.page_source\n",
+    "\n",
+    "\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fa172737-547e-47d9-bd73-30e4ddc7fd50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "등록대수(만대)\n",
+      "2,099\n",
+      "2,180\n",
+      "2,253\n",
+      "2,320\n",
+      "2,368\n",
+      "2,437\n",
+      "2,491\n",
+      "2,550\n",
+      "2,595\n",
+      "2,630\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "전년대비 증가대수(천대)\n",
+      "871\n",
+      "813\n",
+      "725\n",
+      "674\n",
+      "475\n",
+      "689\n",
+      "545\n",
+      "592\n",
+      "446\n",
+      "349\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "전년대비 증감비(%)\n",
+      "4.3\n",
+      "3.9\n",
+      "3.3\n",
+      "3.0\n",
+      "2.0\n",
+      "2.9\n",
+      "2.2\n",
+      "2.4\n",
+      "1.7\n",
+      "1.3\n",
+      "\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.select import Select\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "import requests\n",
+    "\n",
+    "url = 'https://www.index.go.kr/unity/potal/main/EachDtlPageDetail.do?idx_cd=1257'\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get(url)\n",
+    "time.sleep(1)\n",
+    "\n",
+    "# iframe 찾기\n",
+    "iframe = driver.find_element(By.ID, 'showStblGams')\n",
+    "driver.switch_to.frame(iframe)  # iframe으로 변환\n",
+    "html = driver.page_source\n",
+    "soup = BeautifulSoup(html, 'html.parser')   # 소스 파싱\n",
+    "for tr in soup.select('#t_Table_125701 > tbody > tr'):\n",
+    "    print(tr.text)\n",
+    "    print('-'*100)\n",
+    "\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "314da614-e715-49fb-a560-94b2ce93ea18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.select import Select\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "import requests\n",
+    "\n",
+    "url = 'https://www.index.go.kr/unity/potal/main/EachDtlPageDetail.do?idx_cd=1257'\n",
+    "response = requests.get(url)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7c67cc80-5ac2-4beb-93ed-0dbf2feb3b02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "기아 뉴 쏘렌토 하이브리드(MQ4) 5,855대 국산 중형 SUV 1위\n",
+      "기아 뉴 스포티지(NQ5) 5,313대 국산 준중형 SUV 1위\n",
+      "기아 뉴 셀토스 5,179대 국산 소형 SUV 1위\n",
+      "현대 뉴 아반떼(CN7) 5,059대 국산 준중형 세단 1위\n",
+      "현대 뉴 쏘나타(DN8) 4,460대 국산 중형 세단 1위\n",
+      "현대 싼타페 하이브리드(MX5) 4,387대 국산 중형 SUV 2위\n",
+      "기아 뉴 레이 4,090대 국산 경형 RV 1위\n",
+      "현대 그랜저 하이브리드(GN7) 3,520대 국산 준대형 세단 1위\n",
+      "2 page -----------------------------------------------------------------\n",
+      "기아 뉴 쏘렌토 하이브리드(MQ4) 5,855대 국산 중형 SUV 1위\n",
+      "기아 뉴 스포티지(NQ5) 5,313대 국산 준중형 SUV 1위\n",
+      "기아 뉴 셀토스 5,179대 국산 소형 SUV 1위\n",
+      "현대 뉴 아반떼(CN7) 5,059대 국산 준중형 세단 1위\n",
+      "현대 뉴 쏘나타(DN8) 4,460대 국산 중형 세단 1위\n",
+      "현대 싼타페 하이브리드(MX5) 4,387대 국산 중형 SUV 2위\n",
+      "기아 뉴 레이 4,090대 국산 경형 RV 1위\n",
+      "현대 그랜저 하이브리드(GN7) 3,520대 국산 준대형 세단 1위\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&ssc=tab.nx.all&query=%EC%9E%90%EB%8F%99%EC%B0%A8+%ED%8C%90%EB%A7%A4%EB%9F%89&oquery=%EB%84%A4%EC%9D%B4%EB%B2%84+%EC%8B%A0%EC%B0%A8+%ED%8C%90%EB%A7%A4%EB%9F%89&tqi=i9nRHlqosesss4arjwKssssssyG-448832'\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.select import Select\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "import requests\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get(url)   # 메이 사이트 접속\n",
+    "time.sleep(1)  # 웹사이트 기다림\n",
+    "\n",
+    "# 1월선택을 위해 month 팝업클릭\n",
+    "button = driver.find_element(By.XPATH,'//*[@id=\"main_pack\"]/div[3]/div[2]/div[1]/\\\n",
+    "    div/div[1]/div/div[1]/a[2]')\n",
+    "button.click()\n",
+    "time.sleep(1)  # 팝업 기다림\n",
+    "\n",
+    "# month 팝업에서 1월 선택\n",
+    "button = driver.find_element(By.XPATH, '//*[@id=\"main_pack\"]/div[3]/div[2]/div[1]/div\\\n",
+    "    /div[1]/div/div[2]/div/div[2]/div/div/div/ul/li[1]/a')\n",
+    "button.click()\n",
+    "time.sleep(1)  # 변경된 데이터 반영 기다림\n",
+    "\n",
+    "# 데이터 파싱\n",
+    "html = driver.page_source\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "div_lists = soup.select('#main_pack > div.sc_new.cs_common_module.case_list.color_5._cs_car_month_list > \\\n",
+    "    div.cm_content_wrap > div.cm_content_area > div > div._car_panel_wrapper > \\\n",
+    "    div:nth-child(1) > div > div')\n",
+    "for div in div_lists:\n",
+    "    print(div.find('strong',class_='title').text ,\n",
+    "          div.find_all('span',class_='info_txt')[0].text,\n",
+    "          div.find_all('span',class_='info_txt')[1].text\n",
+    "         )\n",
+    "\n",
+    "print('2 page -----------------------------------------------------------------')\n",
+    "# 다음페이지 이동\n",
+    "next_xpath = '//*[@id=\"main_pack\"]/div[3]/div[2]/div[1]/div/div[4]/div/a[2]'\n",
+    "next_button = driver.find_element(By.XPATH, next_xpath)\n",
+    "next_button.click()\n",
+    "time.sleep(1) # 다음페이지 나올때 까지 기다림\n",
+    "\n",
+    "# 데이터 파싱\n",
+    "html = driver.page_source\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "div_lists = soup.select('#main_pack > div.sc_new.cs_common_module.case_list.color_5._cs_car_month_list > \\\n",
+    "    div.cm_content_wrap > div.cm_content_area > div > div._car_panel_wrapper > \\\n",
+    "    div:nth-child(1) > div > div')\n",
+    "for div in div_lists:\n",
+    "    print(div.find('strong',class_='title').text ,\n",
+    "          div.find_all('span',class_='info_txt')[0].text,\n",
+    "          div.find_all('span',class_='info_txt')[1].text\n",
+    "         )\n",
+    "\n",
+    "# 종료\n",
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0e1daf85-4de7-4183-aabd-0a31c191d212",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "기아 뉴 쏘렌토 하이브리드(MQ4) 5,855대 국산 중형 SUV 1위\n",
+      "기아 뉴 스포티지(NQ5) 5,313대 국산 준중형 SUV 1위\n",
+      "기아 뉴 셀토스 5,179대 국산 소형 SUV 1위\n",
+      "현대 뉴 아반떼(CN7) 5,059대 국산 준중형 세단 1위\n",
+      "현대 뉴 쏘나타(DN8) 4,460대 국산 중형 세단 1위\n",
+      "현대 싼타페 하이브리드(MX5) 4,387대 국산 중형 SUV 2위\n",
+      "기아 뉴 레이 4,090대 국산 경형 RV 1위\n",
+      "현대 그랜저 하이브리드(GN7) 3,520대 국산 준대형 세단 1위\n",
+      "2 page -----------------------------------------------------------------\n",
+      "기아 뉴 카니발 하이브리드(KA4) 3,476대 국산 대형 RV 1위\n",
+      "제네시스 뉴 G80(RG3) 3,449대 국산 준대형 세단 2위\n",
+      "기아 뉴 카니발(KA4) 3,212대 국산 대형 RV 2위\n",
+      "현대 그랜저(GN7) 3,170대 국산 준대형 세단 3위\n",
+      "제네시스 뉴 GV70 3,088대 국산 중형 SUV 3위\n",
+      "제네시스 뉴 GV80 2,938대 국산 준대형 SUV 1위\n",
+      "현대 뉴 투싼(NX4) 2,896대 국산 준중형 SUV 2위\n",
+      "르노코리아 그랑 콜레오스 하이브리드 2,669대 국산 중형 SUV 4위\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&ssc=tab.nx.all&query=%EC%9E%90%EB%8F%99%EC%B0%A8+%ED%8C%90%EB%A7%A4%EB%9F%89&oquery=%EB%84%A4%EC%9D%B4%EB%B2%84+%EC%8B%A0%EC%B0%A8+%ED%8C%90%EB%A7%A4%EB%9F%89&tqi=i9nRHlqosesss4arjwKssssssyG-448832'\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.select import Select\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "import requests\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get(url)   # 메이 사이트 접속\n",
+    "time.sleep(1)  # 웹사이트 기다림\n",
+    "\n",
+    "# 1월선택을 위해 month 팝업클릭\n",
+    "button = driver.find_element(By.XPATH,'//*[@id=\"main_pack\"]/div[3]/div[2]/div[1]/\\\n",
+    "    div/div[1]/div/div[1]/a[2]')\n",
+    "button.click()\n",
+    "time.sleep(1)  # 팝업 기다림\n",
+    "\n",
+    "# month 팝업에서 1월 선택\n",
+    "button = driver.find_element(By.XPATH, '//*[@id=\"main_pack\"]/div[3]/div[2]/div[1]/div\\\n",
+    "    /div[1]/div/div[2]/div/div[2]/div/div/div/ul/li[1]/a')\n",
+    "button.click()\n",
+    "time.sleep(1)  # 변경된 데이터 반영 기다림\n",
+    "\n",
+    "# 데이터 파싱\n",
+    "html = driver.page_source\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "div_lists = soup.select('#main_pack > div.sc_new.cs_common_module.case_list.color_5._cs_car_month_list > \\\n",
+    "    div.cm_content_wrap > div.cm_content_area > div > div._car_panel_wrapper > \\\n",
+    "    div:nth-child(1) > div > div')\n",
+    "for div in div_lists:\n",
+    "    print(div.find('strong',class_='title').text ,\n",
+    "          div.find_all('span',class_='info_txt')[0].text,\n",
+    "          div.find_all('span',class_='info_txt')[1].text\n",
+    "         )\n",
+    "\n",
+    "print('2 page -----------------------------------------------------------------')\n",
+    "# 다음페이지 이동\n",
+    "next_xpath = '//*[@id=\"main_pack\"]/div[3]/div[2]/div[1]/div/div[4]/div/a[2]'\n",
+    "next_button = driver.find_element(By.XPATH, next_xpath)\n",
+    "next_button.click()\n",
+    "time.sleep(1) # 다음페이지 나올때 까지 기다림\n",
+    "\n",
+    "# 데이터 파싱\n",
+    "html = driver.page_source\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "div_lists = soup.select('#main_pack > div.sc_new.cs_common_module.case_list.color_5._cs_car_month_list > \\\n",
+    "    div.cm_content_wrap > div.cm_content_area > div > div._car_panel_wrapper > \\\n",
+    "    div:nth-child(2) > div > div')\n",
+    "for div in div_lists:\n",
+    "    print(div.find('strong',class_='title').text ,\n",
+    "          div.find_all('span',class_='info_txt')[0].text,\n",
+    "          div.find_all('span',class_='info_txt')[1].text\n",
+    "         )\n",
+    "\n",
+    "# 종료\n",
+    "driver.quit()"
+   ]
   }
  ],
  "metadata": {
